2009-07-28 09:22  cvs

	* lib/Alister/Base/: Sums.pm, Sums.pod: touched up pod

2009-07-27 18:09  cvs

	* lib/Alister/Base/Sums.pm, lib/Alister/Base/Sums.pod,
	  t/00_basic_compile.t, t/01_validate_args.t, t/02_sum_add.t,
	  t/03_sum_get.t, t/04_sum_delete.t, t/05_sum_update.t,
	  t/dev.dbh.conf: Initial revision
