@@ -1,3 +1,9 @@
+2009-07-28 14:29  cvs
+
+	* lib/Alister/Base/Sums.pm: Another pod error fixed. It turns out
+	  if you have lib/Module.pod and lib/Module.pm, if you have ANY pod
+	  directives in lib/Module.pm, it overrides lib/Module.pod!!!
+
 2009-07-28 09:22  cvs
 
 	* lib/Alister/Base/: Sums.pm, Sums.pod: touched up pod
